# otus_cpp_prof_hw13

./: README.md
.github/workflows/: cmake-multi-platform.yml
source/: CMakeLists.txt  classifier.h  helpers.cpp  helpers.h  logreg_classifier.cpp  logreg_classifier.h  main.cpp
